log
Wed, Mar 19, 2025  8:29:07 AM: 
 tests:  1|4
total_score: 10/70
3f6cb15
Wed, Mar 19, 2025  8:40:07 AM: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
aad46f8
Wed, Mar 19, 2025  8:41:21 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:20: error: lvalue required as unary '&' operand
       pushFront(L, &((*(int *)i+1)));
                    ^
Compilation failed
9e1c963
Wed, Mar 19, 2025  8:42:24 AM: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
793d951
Wed, Mar 19, 2025  8:47:48 AM: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
035a805
Wed, Mar 19, 2025  8:48:41 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4cfbc81
Wed, Mar 19, 2025  8:51:05 AM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       valor = i+1;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
9221c34
Wed, Mar 19, 2025  8:51:51 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       valor = i+1;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
b7dc9ce
Wed, Mar 19, 2025  8:52:11 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ff71baf
Wed, Mar 19, 2025  8:53:27 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
d19d84b
Wed, Mar 19, 2025  8:59:26 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento = first(L);
                   ^~~~~
exercises.c:61:20: error: array subscript is not an integer
    int suma = first[L]
                    ^
exercises.c:62:4: error: expected ',' or ';' before 'while'
    while(elemento != NULL){
    ^~~~~
exercises.c:61:8: error: unused variable 'suma' [-Werror=unused-variable]
    int suma = first[L]
        ^~~~
exercises.c:60:8: error: unused variable 'elemento' [-Werror=unused-variable]
    int elemento = first(L);
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6007331
Wed, Mar 19, 2025  8:59:40 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:60:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento = first(L);
                   ^~~~~
exercises.c:62:19: error: comparison between pointer and integer [-Werror]
    while(elemento != NULL){
                   ^~
exercises.c:64:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elemento = next(L);
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
07ee46c
Wed, Mar 19, 2025  9:00:28 AM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       (*elemento) = next(L);
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
596c92a
Wed, Mar 19, 2025  9:02:41 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
fb4dc87
Wed, Mar 19, 2025  9:04:10 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
8924f73
Wed, Mar 19, 2025  9:04:41 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7102acf
Wed, Mar 19, 2025  9:05:34 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
2f98fcf
Wed, Mar 19, 2025  9:08:33 AM: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:81:24: error: comparison between pointer and integer [-Werror]
       if(elementoLista == elem) popCurrent(L);
                        ^~
cc1.exe: all warnings being treated as errors
Compilation failed
e63632f
Wed, Mar 19, 2025  9:09:39 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
8f55ce5
Wed, Mar 19, 2025  9:19:08 AM: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:95:18: error: comparison between pointer and integer [-Werror]
    while(top(P1) != -1){
                  ^~
exercises.c:100:19: error: comparison between pointer and integer [-Werror]
    while(top(aux) != -1){
                   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
7557885
Wed, Mar 19, 2025  9:20:32 AM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:95:18: error: comparison between pointer and integer [-Werror]
    while(top(P1) != -1){
                  ^~
exercises.c:100:19: error: comparison between pointer and integer [-Werror]
    while(top(aux) != -1){
                   ^~
exercises.c:101:22: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int elemento = top(aux);
                      ^~~
exercises.c:102:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P1, elemento);
                ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:103:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P2, elemento);
                ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
aa44351
